Ticket #1280 (closed defect: fixed)

Opened 1 year ago

Last modified 10 months ago

Regression: streaming server should not look up Art meta data

Reported by: courmisch Assigned to: zorglub
Priority: normal Milestone: 0.9.0-test2
Component: Playlist Version: master
Severity: major Keywords:
Cc: funman Platform(s): all
Difficulty: unknown Work status: Not started

Description (Last modified by courmisch)

VLC 0.9.0 now tries to lookup "art" for the input even when it makes pretty much no sense, such as when using the stream output (without #display).

This is wrong and needs fixing before the next release. It makes no sense for a streaming server to lookup meta data for performed files. It may also cause problems due to network dependency.

Change History

09/22/07 20:08:32 changed by courmisch

  • summary changed from Abusive art lookups to Regression: streaming server should not look up Art meta data.

09/22/07 20:09:13 changed by courmisch

  • description changed.

09/22/07 20:18:04 changed by courmisch

  • milestone changed from 0.9.0 bugs to 0.9.0-test2.

10/22/07 01:50:37 changed by funman

also the media library seems useless for a server, we might envisage to have some --desktop and --server settings with a predefined set of options

10/22/07 01:58:10 changed by jb

  • cc set to funman.

10/30/07 18:30:33 changed by funman

or we could suppose one would not compile those plugins for a server, or disable them in the configuration...

10/30/07 19:00:30 changed by courmisch

Yeah, I forgot, most people compile there own VLC and manually remove the meta plugins...

Please be serious.

10/30/07 19:11:21 changed by funman

For those people using binaries, there is a configuration. I am serious.

10/30/07 19:14:33 changed by courmisch

Oh yeah? so people are supposed to automatically know about the configuration option. That's proposterous. The thing has been working so far. Either this is fixed PROPERLY or it is disabled BY DEFAULT.

10/30/07 19:24:06 changed by funman

  • status changed from new to closed.
  • resolution set to fixed.

(In [22912]) Disable album art by default. fix #1280