Disable album art by default. fix #1280